--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -98,8 +98,10 @@ android {
         applicationId "com.eFlashManderin"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 7
-        versionName "1.6"
+        versionCode 8
+        versionName "1.7"
+        missingDimensionStrategy "store", "play"
+
     }
 
     splits {
