--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,6 +9,11 @@ buildscript {
 
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
         ndkVersion = "23.1.7779620"
+        supportLibVersion = "28.0.0"
+        androidXAnnotation = "1.1.0"
+        androidXBrowser = "1.0.0"
+        minSdkVersion = 24
+        kotlinVersion = "1.8.0"
     }
     repositories {
         google()
@@ -17,5 +22,7 @@ buildscript {
     dependencies {
         classpath("com.android.tools.build:gradle:7.3.1")
         classpath("com.facebook.react:react-native-gradle-plugin")
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+
     }
 }
